[tool.poetry]
name = "chatgpt-demo-api"
version = "0.1.0"
description = ""
authors = ["Memorysaver <mfa1484@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.93.0"
uvicorn = {extras = ["standard"], version = "^0.21.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
black = "^22.8.0"


[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
