[tool.poetry]
name = "chatgpt-demo-api"
version = "0.1.0"
description = ""
authors = ["Memorysaver <mfa1484@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.93.0"
uvicorn = {extras = ["standard"], version = "^0.21.0"}

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
